[gd_scene load_steps=15 format=3 uid="uid://bsqxxq2g2j8c2"]

[ext_resource type="Script" path="res://enemies/shade/shade.gd" id="1_skdvo"]
[ext_resource type="Texture2D" uid="uid://do3sfcrorqsh6" path="res://enemies/shade/shade_placeholder.png" id="2_j5ygx"]
[ext_resource type="Texture2D" uid="uid://cajlahuexsaa7" path="res://shadow.png" id="2_qqwy7"]
[ext_resource type="PackedScene" uid="uid://e73lohugudus" path="res://enemies/shade/tentacle_attacks/stab.tscn" id="3_nulj5"]
[ext_resource type="PackedScene" uid="uid://dcwjed8mdov1e" path="res://enemies/shade/tentacle_attacks/swipe.tscn" id="4_b7jbm"]
[ext_resource type="Script" path="res://Hitbox.gd" id="5_uqqyd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8660g"]

[sub_resource type="Animation" id="Animation_0bwpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_iglh3"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.00015]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.4, 0.4)]
}

[sub_resource type="Animation" id="Animation_dg477"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 3), Vector2(2, 9), Vector2(2, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udi3j"]
_data = {
"RESET": SubResource("Animation_0bwpq"),
"death": SubResource("Animation_iglh3"),
"walk": SubResource("Animation_dg477")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s7o2t"]
radius = 9.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_31kdd"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_av1fh"]
radius = 34.08

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 17
script = ExtResource("1_skdvo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 32)
shape = SubResource("CircleShape2D_8660g")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
self_modulate = Color(1, 1, 1, 0.501961)
position = Vector2(0, 2)
texture = ExtResource("2_qqwy7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_udi3j")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(2, 3)
texture = ExtResource("2_j5ygx")

[node name="Stabby" parent="Sprite2D" instance=ExtResource("3_nulj5")]
z_index = -1
position = Vector2(-1, -7)

[node name="Slashy" parent="Sprite2D" instance=ExtResource("4_b7jbm")]
z_index = -1
position = Vector2(-1, -7)
rotation = 3.14159

[node name="Hitbox" type="CharacterBody2D" parent="Sprite2D"]
position = Vector2(-2, -3)
collision_layer = 4
collision_mask = 0
script = ExtResource("5_uqqyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Hitbox"]
position = Vector2(1, -4)
shape = SubResource("CapsuleShape2D_s7o2t")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Brain" type="Timer" parent="."]
autostart = true

[node name="DetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(1, 32)
shape = SubResource("CircleShape2D_31kdd")

[node name="CloseRangeDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseRangeDetectionZone"]
position = Vector2(1, 32)
shape = SubResource("CircleShape2D_av1fh")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="death" from="Sprite2D/Hitbox" to="." method="_on_hitbox_death"]
[connection signal="timeout" from="Brain" to="." method="_on_brain_timeout"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="body_entered" from="CloseRangeDetectionZone" to="." method="_on_close_range_detection_zone_body_entered"]
